--- a/papers/index.html
+++ b/papers/index.html
@@ -117,6 +117,44 @@
 						
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/mok2020audiencebot"><span id="mok2020audiencebot">Terrance Mok, Colin Matthew Au Yeung, Anthony Tang, and Lora Oehlberg. (2020). <span style="text-decoration: underline">Talk Like Somebody is Watching: Understanding and Supporting Novice Live Streamers</span>. In <i>EA IMX 2020: Extended Abstracts of the ACM International Conference on Interactive Media Experiences</i>.</span>
+
+(poster).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/mok2020audiencebot/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/aseniero2020activityriver"><span id="aseniero2020activityriver">Bon Adriel Aseniero, Charles Perin, Wesley Willett, Anthony Tang, and Sheelagh Carpendale. (2020). <span style="text-decoration: underline">Activity River: Visualizing Planned and Logged Personal Activities for Reflection</span>. In <i>AVI 2020: Proceedings of the 2020 International Conference on Advanced Visual Interfaces</i>, 10 pages.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/aseniero2020activityriver/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/vinod2020targetassistance"><span id="vinod2020targetassistance">Vinod Asokan, Scott Bateman, and Anthony Tang. (2020). <span style="text-decoration: underline">Assistance for Target Selection in Mobile Augmented Reality</span>. In <i>GI 2020: Proceedings of the 46th Graphics Interface Conference 2020</i>, 10 pages.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/vinod2020targetassistance/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 10 pages.</span>
 
 (conference).</a><br />
