Add UIST 2020 paper

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -245,19 +245,7 @@
 
 <h1><a name="Conference"></a>Conference</h1>
 <ol class="bibliography"><li><section id="citation">
-    <a href="/papers/aseniero2020activityriver"><span id="aseniero2020activityriver">Bon Adriel Aseniero, Charles Perin, Wesley Willett, Anthony Tang, and Sheelagh Carpendale. (2020). <span style="text-decoration: underline">Activity River: Visualizing Planned and Logged Personal Activities for Reflection</span>. In <i>AVI 2020: Proceedings of the 2020 International Conference on Advanced Visual Interfaces</i>, 10 pages.</span>
-
-(conference).</a><br />
-
-
-
-
-
-
-
-</section><a class="details" href="/papers/aseniero2020activityriver/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 10 pages.</span>
+    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 1–12.</span>
 
 (conference).</a><br />
 
@@ -271,6 +259,18 @@
 
 </section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/yan2020zoomwalls"><span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/vinod2020targetassistance"><span id="vinod2020targetassistance">Vinod Asokan, Scott Bateman, and Anthony Tang. (2020). <span style="text-decoration: underline">Assistance for Target Selection in Mobile Augmented Reality</span>. In <i>GI 2020: Proceedings of the 46th Graphics Interface Conference 2020</i>, 10 pages.</span>
 
 (conference).</a><br />
@@ -282,28 +282,24 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4"><i class="fa fa-film"></i></a>
+
 
 </section><a class="details" href="/papers/vinod2020targetassistance/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/tolley2019windywall"><span id="tolley2019windywall">David Tolley, Thi Ngoc Tram Nguyen, Anthony Tang, Nimesha Ranasinghe, Kensaku Kawauchi, and Ching-Chiuan Yen. (2019). <span style="text-decoration: underline">WindyWall: Exploring Creative Wind Simulations</span>. In <i>TEI 2019: International Conference on Tangible and Embedded Interaction 2019</i>, 635–644.</span>
+    <a href="/papers/aseniero2020activityriver"><span id="aseniero2020activityriver">Bon Adriel Aseniero, Charles Perin, Wesley Willett, Anthony Tang, and Sheelagh Carpendale. (2020). <span style="text-decoration: underline">Activity River: Visualizing Planned and Logged Personal Activities for Reflection</span>. In <i>AVI 2020: Proceedings of the 2020 International Conference on Advanced Visual Interfaces</i>, 10 pages.</span>
 
 (conference).</a><br />
 
-	<small>Acceptance: 34% - 37/110.</small>
 
 
 
-	<br />
-
-
-	<a href="http://hcitang.org/papers/2019-tei2019-windywall.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href="http://hcitang.org/papers/2019-tei2019-windywall.mp4"><i class="fa fa-film"></i></a>
 
-
-</section><a class="details" href="/papers/tolley2019windywall/"><!-- --></a></li>
+</section><a class="details" href="/papers/aseniero2020activityriver/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/seyed2019mannequette"><span id="seyed2019mannequette">Teddy Seyed and Anthony Tang. (2019). <span style="text-decoration: underline">Mannequette: Understanding and Enabling Collaboration and Creativity on Avant-Garde Fashion-Tech Runways</span>. In <i>DIS 2019: Conference on Designing Interactive Systems 2019</i>, 10 pages.</span>
 
@@ -327,31 +323,25 @@
 
 </section><a class="details" href="/papers/seyed2019mannequette/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2018rema"><span id="feick2018rema">Martin Feick, Terrance Mok, Anthony Tang, Lora Oehlberg, and Ehud Sharlin. (2018). <span style="text-decoration: underline">Perspective on and Re-Orientation of Physical Proxies in Object-Focused Remote Collaboration</span>. In <i>CHI 2018: Proceedings of the 2018 SIGCHI Conference on Human Factors in Computing Systems</i>, Paper 281.</span>
+    <a href="/papers/tolley2019windywall"><span id="tolley2019windywall">David Tolley, Thi Ngoc Tram Nguyen, Anthony Tang, Nimesha Ranasinghe, Kensaku Kawauchi, and Ching-Chiuan Yen. (2019). <span style="text-decoration: underline">WindyWall: Exploring Creative Wind Simulations</span>. In <i>TEI 2019: International Conference on Tangible and Embedded Interaction 2019</i>, 635–644.</span>
 
 (conference).</a><br />
 
-	<small>Acceptance: 25.7% - 667/2595.</small>
+	<small>Acceptance: 34% - 37/110.</small>
 
-
-	<small>Notes: Honourable Mention Award - Top 5% of all submissions; 10 pages.</small>
 
 
 	<br />
 
 
-	<a href="http://hcitang.org/papers/2018-chi2018-rema.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2019-tei2019-windywall.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href="http://chi2018.acm.org"><i class="fa fa-sticky-note-o"></i></a>
+
+	<a href="http://hcitang.org/papers/2019-tei2019-windywall.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href="http://hcitang.org/papers/2018-chi2018-rema.mp4"><i class="fa fa-film"></i></a>
-
-
-	<a href="http://doi.acm.org/10.1145/3173574.3173855"><i class="fa fa-external-link"></i></a>
-
-</section><a class="details" href="/papers/feick2018rema/"><!-- --></a></li>
+</section><a class="details" href="/papers/tolley2019windywall/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/heshmat2018beam"><span id="heshmat2018beam">Yasamin Heshmat, Brennan Jones, Xiaoxuan Xiong, Carman Neustaedter, Anthony Tang, Bernhard E. Riecke, and Lillian Yang. (2018). <span style="text-decoration: underline">Geocaching with a Beam: Shared Outdoor Activities through a Telepresence Robot with 360 Degree Viewing</span>. In <i>CHI 2018: Proceedings of the 2018 SIGCHI Conference on Human Factors in Computing Systems</i>, Paper 359.</span>
 
@@ -492,6 +482,32 @@
 	<a href="http://doi.acm.org/10.1145/3173574.3173714"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/dillman2018visualinteractioncue/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2018rema"><span id="feick2018rema">Martin Feick, Terrance Mok, Anthony Tang, Lora Oehlberg, and Ehud Sharlin. (2018). <span style="text-decoration: underline">Perspective on and Re-Orientation of Physical Proxies in Object-Focused Remote Collaboration</span>. In <i>CHI 2018: Proceedings of the 2018 SIGCHI Conference on Human Factors in Computing Systems</i>, Paper 281.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 25.7% - 667/2595.</small>
+
+
+	<small>Notes: Honourable Mention Award - Top 5% of all submissions; 10 pages.</small>
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2018-chi2018-rema.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="http://chi2018.acm.org"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2018-chi2018-rema.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="http://doi.acm.org/10.1145/3173574.3173855"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2018rema/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/wuertz2017dota2"><span id="wuertz2017dota2">Jason Wuertz, Scott Bateman, and Anthony Tang. (2017). <span style="text-decoration: underline">Why Players use Pings and Annotations in Dota 2</span>. In <i>CHI 2017: Proceedings of the 2017 SIGCHI Conference on Human Factors in Computing Systems </i>, 1978–2018.</span>
 
