--- a/papers/index.html
+++ b/papers/index.html
@@ -117,6 +117,18 @@
 						
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/yan2020zoomwalls"><span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/yan2020zoomwalls/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/mok2020audiencebot"><span id="mok2020audiencebot">Terrance Mok, Colin Matthew Au Yeung, Anthony Tang, and Lora Oehlberg. (2020). <span style="text-decoration: underline">Talk Like Somebody is Watching: Understanding and Supporting Novice Live Streamers</span>. In <i>EA IMX 2020: Extended Abstracts of the ACM International Conference on Interactive Media Experiences</i>.</span>
 
 (poster).</a><br />
@@ -136,6 +148,8 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
 
 
 
@@ -152,10 +166,12 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4"><i class="fa fa-film"></i></a>
+
 
 </section><a class="details" href="/papers/vinod2020targetassistance/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 10 pages.</span>
+    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 1–12.</span>
 
 (conference).</a><br />
 
