--- a/papers/vinod2020targetassistance/index.html
+++ b/papers/vinod2020targetassistance/index.html
@@ -99,6 +99,8 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4)</a><br/>
+
 
 </p>
 
@@ -112,7 +114,9 @@
 &nbsp;&nbsp;year = {2020},<br />
 &nbsp;&nbsp;pages = {10 pages},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.pdf}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4},<br />
+&nbsp;&nbsp;presentationurl = {https://www.youtube.com/watch?v=cNYckhMfU5s}<br />
 }<br />
 </p>
 					</div>
