--- a/papers/yan2020zoomwalls/index.html
+++ b/papers/yan2020zoomwalls/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</title>
+		<title>ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</h1>
+						<h1 style="margin: 0 0 0.5em 0">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 1–12.</span>
+<span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">We present a mixed-methods study of viewers on their practices and motivations around watching mukbang—video streams of people eating large quantities of food. Viewers’ experiences provide insight on future technologies for multisensorial video streams and technology-supported commensality (eating with others). We surveyed 104 viewers and interviewed 15 of them about their attitudes and reflections on their mukbang viewing habits, their physiological aspects of watching someone eat, and their perceived social relationship with mukbangers. Based on our findings, we propose design implications for remote commensality, and for synchronized multisensorial video streaming content.</p>
+<p style="margin: 0.5em 0 1em 0">We focus on the problem of simulating the haptic infrastructure of a virtual environment (i.e. walls, doors). Our approach relies on multiple ZoomWalls—autonomous robotic encounter-type haptic wall-shaped props—that coordinate to provide haptic feedback for room-scale virtual reality. Based on a user’s movement through the physical space, ZoomWall props are coordinated through a predict-and-dispatch architecture to provide just-in-time haptic feedback for objects the user is about to touch. To refine our system, we conducted simulation studies of different prediction algorithms, which helped us to refine our algorithmic approach to realize the physical ZoomWall prototype. Finally, we evaluated our system through a user experience study, which showed that participants found that ZoomWalls increased their sense of presence in the VR environment. ZoomWalls represents an instance of <i>autonomous mobile reusable props</i>, which we view as an important design direction for haptics in VR.</p>
 
 <!--
 
@@ -94,8 +94,6 @@
 
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
-
-	<a href="http://hcitang.org/papers/2020-chi2020-mukbang.pdf "><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-chi2020-mukbang.pdf )</a><br/>
 
 
 
@@ -105,14 +103,12 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{anjani2020mukbang,<br />
-&nbsp;&nbsp;author = {Anjani, Laurensia and Mok, Terrance and Tang, Anthony and Oehlberg, Lora and Boon, Goh Wooi},<br />
-&nbsp;&nbsp;title = {Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers},<br />
-&nbsp;&nbsp;booktitle = {CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;pages = {1--12},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{yan2020zoomwalls,<br />
+&nbsp;&nbsp;author = {Yixian, Yan and Takashima, Kazuki and Tang, Anthony and Tanno, Takayuki and Fujita, Kazuyuki and Kitamura, Yoshifumi},<br />
+&nbsp;&nbsp;booktitle = {UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology},<br />
+&nbsp;&nbsp;title = {ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-chi2020-mukbang.pdf }<br />
+&nbsp;&nbsp;year = {2020}<br />
 }<br />
 </p>
 					</div>
