--- a/people/tony-tang/index.html
+++ b/people/tony-tang/index.html
@@ -300,7 +300,7 @@
 						
 								<a href="#" class="image left"><img src="/assets/images/people/tony-tang.jpg" alt="" /></a>
 								
-								<p>I am an Associate Professor in the <a href="http://cpsc.ucalgary.ca/">Department of Computer Science</a> at the University of Calgary. I direct the RICELab (Rethinking Interaction, Collaboration and Engagement) research group.</p>
+								<p>I am an Associate Professor in the <a href="http://ischool.utoronto.ca/">Faculty of Information</a> at the University of Toronto. I direct the RICELab (Rethinking Interaction, Collaboration and Engagement) research group.</p>
 
 <p>My research interests are situated in Computer Supported Cooperative Work (CSCW) – the study of how people work together using technology – with a twist of Ubiquitous Computing – technology in everyday scenarios. My current research investigates the integration of mobile devices in large display environments, exploration into personal informatics, and telecommunication technologies for collaborative work.</p>
 
