--- a/papers/aseniero2020activityriver/index.html
+++ b/papers/aseniero2020activityriver/index.html
@@ -95,6 +95,8 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf)</a><br/>
+
 
 
 
@@ -109,7 +111,8 @@
 &nbsp;&nbsp;booktitle = {AVI 2020: Proceedings of the 2020 International Conference on Advanced Visual Interfaces},<br />
 &nbsp;&nbsp;year = {2020},<br />
 &nbsp;&nbsp;pages = {10 pages},<br />
-&nbsp;&nbsp;type = {conference}<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf}<br />
 }<br />
 </p>
 					</div>
