papers: added tangi, vrquestionnaire, audiencebot, zoomwalls, and activityriver

--- a/papers/aseniero2020activityriver/index.html
+++ b/papers/aseniero2020activityriver/index.html
@@ -82,6 +82,8 @@
 <span id="aseniero2020activityriver">Bon Adriel Aseniero, Charles Perin, Wesley Willett, Anthony Tang, and Sheelagh Carpendale. (2020). <span style="text-decoration: underline">Activity River: Visualizing Planned and Logged Personal Activities for Reflection</span>. In <i>AVI 2020: Proceedings of the 2020 International Conference on Advanced Visual Interfaces</i>, 10 pages.</span>
 
 
+	<small>Notes: Honourable mention.</small>
+
 
 </p>
 
@@ -112,7 +114,8 @@
 &nbsp;&nbsp;year = {2020},<br />
 &nbsp;&nbsp;pages = {10 pages},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf},<br />
+&nbsp;&nbsp;notes = {Honourable mention}<br />
 }<br />
 </p>
 					</div>
