--- a/papers/feick2020vrqt/index.html
+++ b/papers/feick2020vrqt/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</title>
+		<title>The Virtual Reality Questionnaire Toolkit</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</h1>
+						<h1 style="margin: 0 0 0.5em 0">The Virtual Reality Questionnaire Toolkit</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">We focus on the problem of simulating the haptic infrastructure of a virtual environment (i.e. walls, doors). Our approach relies on multiple ZoomWalls—autonomous robotic encounter-type haptic wall-shaped props—that coordinate to provide haptic feedback for room-scale virtual reality. Based on a user’s movement through the physical space, ZoomWall props are coordinated through a predict-and-dispatch architecture to provide just-in-time haptic feedback for objects the user is about to touch. To refine our system, we conducted simulation studies of different prediction algorithms, which helped us to refine our algorithmic approach to realize the physical ZoomWall prototype. Finally, we evaluated our system through a user experience study, which showed that participants found that ZoomWalls increased their sense of presence in the VR environment. ZoomWalls represents an instance of <i>autonomous mobile reusable props</i>, which we view as an important design direction for haptics in VR.</p>
+<p style="margin: 0.5em 0 1em 0">In this work, we present the VRQuestionnaireToolkit, which enables the research community to easily collect subjective measures within virtual reality (VR). We contribute a highly customizable and reusable open-source toolkit which can be integrated in existing VR projects rapidly. The toolkit comes with a pre-installed set of standard questionnaires such as NASA TLX, SSQ and SUS Presence questionnaire. Our system aims to lower the entry barrier to use questionnaires in VR and to significantly reduce development time and cost needed to run pre-, in between- and post-study questionnaires.</p>
 
 <!--
 
@@ -94,8 +94,6 @@
 
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
-
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf)</a><br/>
 
 
 
@@ -105,13 +103,12 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{yan2020zoomwalls,<br />
-&nbsp;&nbsp;author = {Yixian, Yan and Takashima, Kazuki and Tang, Anthony and Tanno, Takayuki and Fujita, Kazuyuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;booktitle = {UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;title = {ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2020vrqt,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Kleer, Niko and Tang, Anthony and Krüger, Antonio},<br />
+&nbsp;&nbsp;booktitle = {AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019},<br />
+&nbsp;&nbsp;title = {The Virtual Reality Questionnaire Toolkit},<br />
+&nbsp;&nbsp;type = {poster},<br />
+&nbsp;&nbsp;year = {2020}<br />
 }<br />
 </p>
 					</div>
