--- a/papers/index.html
+++ b/papers/index.html
@@ -117,12 +117,46 @@
 						
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/jones2020wsar"><span id="jones2020wsar">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2020). <span style="text-decoration: underline">Remote Communication in Wilderness Search and Rescue: Implications for the Design of Emergency Distributed-Collaboration Tools for Network-Sparse Environments</span>. <i>Proceedings of the ACM on Human-Computer Interaction</i> 4, GROUP, 10: <span style="text-decoration: none">28 pages</span>.</span>
+
+(journal).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2020-group2020-wsar.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+	<a href="https://doi.org/10.1145/3375190"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/jones2020wsar/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2020tangi"><span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <span style="text-decoration: underline">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</span>. In <i>ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 28.8% - 87/302.</small>
+
+
+
+	<br />
+
+
+
+
+
+</section><a class="details" href="/papers/feick2020tangi/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/yan2020zoomwalls"><span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
 
 (conference).</a><br />
 
 
 
+
+	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
@@ -136,6 +170,8 @@
 
 
 
+	<a href="http://hcitang.org/papers/2020-imxposter-mok-audiencebot.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
 
 
 
@@ -146,6 +182,10 @@
 (conference).</a><br />
 
 
+	<small>Notes: Honourable mention.</small>
+
+
+	<br />
 
 
 	<a href="http://hcitang.org/papers/2020-avi2020-aseniero-activity-river.pdf"><i class="fa fa-file-pdf-o"></i></a>
@@ -185,7 +225,7 @@
 
 </section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2020tangi"><span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+    <a href="/papers/feick2020tangj"><span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 (techreport).</a><br />
 
@@ -197,23 +237,19 @@
 
 
 
-</section><a class="details" href="/papers/feick2020tangi/"><!-- --></a></li>
+</section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/jones2020wsar"><span id="jones2020wsar">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2020). <span style="text-decoration: underline">Remote Communication in Wilderness Search and Rescue: Implications for the Design of Emergency Distributed-Collaboration Tools for Network-Sparse Environments</span>. <i>Proceedings of the ACM on Human-Computer Interaction</i> 4, GROUP, 10: <span style="text-decoration: none">28 pages</span>.</span>
+    <a href="/papers/feick2020vrqt"><span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
 
-(journal).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2020-group2020-wsar.pdf"><i class="fa fa-file-pdf-o"></i></a>
+(poster).</a><br />
 
 
 
 
-	<a href="https://doi.org/10.1145/3375190"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/jones2020wsar/"><!-- --></a></li></ol>
+
+
+</section><a class="details" href="/papers/feick2020vrqt/"><!-- --></a></li></ol>
 
 <h1><a name="2019"></a>2019</h1>
 <ol class="bibliography"><li><section id="citation">
