--- a/papers/mok2020audiencebot/index.html
+++ b/papers/mok2020audiencebot/index.html
@@ -95,6 +95,8 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2020-imxposter-mok-audiencebot.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-imxposter-mok-audiencebot.pdf)</a><br/>
+
 
 
 
@@ -108,7 +110,8 @@
 &nbsp;&nbsp;booktitle = {EA IMX 2020: Extended Abstracts of the ACM International Conference on Interactive Media Experiences},<br />
 &nbsp;&nbsp;title = {Talk Like Somebody is Watching: Understanding and Supporting Novice Live Streamers},<br />
 &nbsp;&nbsp;type = {poster},<br />
-&nbsp;&nbsp;year = {2020}<br />
+&nbsp;&nbsp;year = {2020},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-imxposter-mok-audiencebot.pdf}<br />
 }<br />
 </p>
 					</div>
