--- a/papers/feick2020tangi/index.html
+++ b/papers/feick2020tangi/index.html
@@ -79,9 +79,11 @@
 						<h1 style="margin: 0 0 0.5em 0">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+<span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <span style="text-decoration: underline">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</span>. In <i>ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality</i>.</span>
 
 
+
+	<small>Acceptance: 28.8% - 87/302.</small>
 
 </p>
 
@@ -96,8 +98,6 @@
 <p style="margin: 0.5em 0 1em 0">
 
 
-	<a href="https://arxiv.org/abs/2001.03021"><i class="fa fa-sticky-note-o"></i> URL (https://arxiv.org/abs/2001.03021)</a><br/>
-
 
 
 </p>
@@ -105,14 +105,13 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@techreport{feick2020tangi,<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2020tangi,<br />
 &nbsp;&nbsp;author = {Feick, Martin and Bateman, Scott and Tang, Anthony and Miede, André and Marquardt, Nicolai},<br />
+&nbsp;&nbsp;booktitle = {ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality},<br />
 &nbsp;&nbsp;title = {TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality},<br />
+&nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;number = {2001.03021 [cs.HC]},<br />
-&nbsp;&nbsp;publisher = {arXiv},<br />
-&nbsp;&nbsp;type = {techreport},<br />
-&nbsp;&nbsp;url = {https://arxiv.org/abs/2001.03021}<br />
+&nbsp;&nbsp;acceptance = {28.8% - 87/302}<br />
 }<br />
 </p>
 					</div>
