--- a/papers/feick2020tangj/index.html
+++ b/papers/feick2020tangj/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</title>
+		<title>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</h1>
+						<h1 style="margin: 0 0 0.5em 0">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="yan2020zoomwalls">Yan Yixian, Kazuki Takashima, Anthony Tang, Takayuki Tanno, Kazuyuki Fujita, and Yoshifumi Kitamura. (2020). <span style="text-decoration: underline">ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds</span>. In <i>UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">We focus on the problem of simulating the haptic infrastructure of a virtual environment (i.e. walls, doors). Our approach relies on multiple ZoomWalls—autonomous robotic encounter-type haptic wall-shaped props—that coordinate to provide haptic feedback for room-scale virtual reality. Based on a user’s movement through the physical space, ZoomWall props are coordinated through a predict-and-dispatch architecture to provide just-in-time haptic feedback for objects the user is about to touch. To refine our system, we conducted simulation studies of different prediction algorithms, which helped us to refine our algorithmic approach to realize the physical ZoomWall prototype. Finally, we evaluated our system through a user experience study, which showed that participants found that ZoomWalls increased their sense of presence in the VR environment. ZoomWalls represents an instance of <i>autonomous mobile reusable props</i>, which we view as an important design direction for haptics in VR.</p>
+<p style="margin: 0.5em 0 1em 0">Exploring and manipulating complex virtual objects is challenging due to limitations of conventional controllers and free-hand interaction techniques. We present the TanGi toolkit which enables novices to rapidly build physical proxy objects using Composable Shape Primitives. TanGi also provides Manipulators allowing users to build objects including movable parts, making them suitable for rich object exploration and manipulation in VR. With a set of different use cases and applications we show the capabilities of the TanGi toolkit, and evaluate its use. In a study with 16 participants, we demonstrate that novices can quickly build physical proxy objects using the Composable Shape Primitives, and explore how different levels of object embodiment affect virtual object exploration. In a second study with 12 participants we evaluate TanGi’s Manipulators, and investigate the effectiveness of embodied interaction. Findings from this study show that TanGi’s proxies outperform traditional controllers, and were generally favored by participants.</p>
 
 <!--
 
@@ -95,8 +95,8 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf)</a><br/>
 
+	<a href="https://arxiv.org/abs/2001.03021"><i class="fa fa-sticky-note-o"></i> URL (https://arxiv.org/abs/2001.03021)</a><br/>
 
 
 
@@ -105,13 +105,14 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{yan2020zoomwalls,<br />
-&nbsp;&nbsp;author = {Yixian, Yan and Takashima, Kazuki and Tang, Anthony and Tanno, Takayuki and Fujita, Kazuyuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;booktitle = {UIST 2020: Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;title = {ZoomWalls: Dynamic Walls that Simulate HapticInfrastructure for Room-scale VR Worlds},<br />
-&nbsp;&nbsp;type = {conference},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@techreport{feick2020tangj,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Bateman, Scott and Tang, Anthony and Miede, André and Marquardt, Nicolai},<br />
+&nbsp;&nbsp;title = {TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality},<br />
 &nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2020-uist2020-yan-zoomwalls.pdf}<br />
+&nbsp;&nbsp;number = {2001.03021 [cs.HC]},<br />
+&nbsp;&nbsp;publisher = {arXiv},<br />
+&nbsp;&nbsp;type = {techreport},<br />
+&nbsp;&nbsp;url = {https://arxiv.org/abs/2001.03021}<br />
 }<br />
 </p>
 					</div>
